styling fix: icons aligned

--- a/filer/private/sass/components/_drag-and-drop.scss
+++ b/filer/private/sass/components/_drag-and-drop.scss
@@ -151,7 +151,7 @@ form .form-row {
             float: right;
             color: $gray-dropzone;
             width: 100%;
-            margin: 30px 0 0;
+            margin: 15px 0 0;
         }
         .icon {
             position: relative;
@@ -219,7 +219,7 @@ form .form-row {
         }
         .filerFile {
             position: absolute;
-            top: 32px;
+            top: 9px;
             // required for django CMS <= 3.1 #673
             left: 20px;
             width: calc(100% - 40px);
